adsd task icon z-index fix

--- a/css/addTaskPage.css
+++ b/css/addTaskPage.css
@@ -327,6 +327,7 @@ input[type="checkbox"] {
   right: 16px;
   width: 24px;
   height: 24px;
+  z-index: 10;
 }
 
 #selectImage {
@@ -967,6 +968,7 @@ margin-top: -8px;
 
   #inputfeld {
     height: 40px;
+    width: 100%;
   }
 
   select {
